[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitwarden-csv-manager"
version = "1.0.0"
description = "A tool to manage and filter Bitwarden CSV exports"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "pandas>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bitwarder"
Repository = "https://github.com/yourusername/bitwarder.git"
Issues = "https://github.com/yourusername/bitwarder/issues"

[project.scripts]
bitwarden-csv-manager = "app:main"
